Use overflow hidden to fix file input

--- a/src/react-components/input/IconButton.scss
+++ b/src/react-components/input/IconButton.scss
@@ -67,11 +67,9 @@
 
   // For file upload buttons
   input {
-    position: absolute;
-    top: 0;
-    right: 0;
     opacity: 0;
     width: 0;
+    overflow: hidden;
 
     &:focus {
       outline: none;
